<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add"
        android:title="@string/create_new"/>

    <item
        android:id="@+id/add_fav"
        android:title="@string/add_to_favorites"/>

    <item
        android:id="@+id/open_with"
        android:title="@string/open_with" />

    <item
        android:id="@+id/rename"
        android:title="@string/rename"/>

    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"/>

    <item
        android:id="@+id/move"
        android:title="@string/move"/>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"/>

    <item
        android:id="@+id/share"
        android:title="@string/share"/>

    <item
        android:id="@+id/details"
        android:title="@string/details"/>

    <item
        android:id="@+id/sort"
        android:title="@string/sort_by"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"/>

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/uri"
        android:title="Grant Uri" />
</menu>
