<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/round_small"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:layout_marginBottom="20dp"
    android:layout_gravity="bottom">

    <TextView
        android:id="@+id/dtv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/create_folder"
        android:textSize="23sp"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input"
            android:hint="@string/new_folder"
            android:selectAllOnFocus="true"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--android:autofillHints=""-->

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/create_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/create_folder">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_folder"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/create_folder"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_file"
            android:text="@string/create_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/hints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:padding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            style="@style/Widget.Material3.Button.TextButton"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@drawable/round_only"
            android:backgroundTint="@color/divider"
            android:layout_margin="5dp"
            android:paddingTop="2dp"
            />

        <Button
            android:id="@+id/btn_create"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:padding="8dp"
            android:textSize="17sp"
            android:textStyle="bold"
            style="@style/Widget.Material3.Button.TextButton"
            />

    </LinearLayout>

</LinearLayout>
