<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/image_description"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:src="@drawable/file"
            android:contentDescription="@string/file" />

        <ImageView
            android:id="@+id/frame"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/frame"
            android:layout_gravity="center"
            android:visibility="gone"
            android:contentDescription="@string/info" />

        <ImageView
            android:id="@+id/type"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/play"
            android:contentDescription="@string/info"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/details"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>